--- a/ASKON-TestTask/ASKON-TestTask.Domain/ASKON-TestTask.Domain.csproj
+++ b/ASKON-TestTask/ASKON-TestTask.Domain/ASKON-TestTask.Domain.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>ASKON_TestTask.Domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.SqlServer.HierarchyId" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
