--- a/ASKON-TestTask/ASKON-TestTask/ASKON-TestTask.csproj
+++ b/ASKON-TestTask/ASKON-TestTask/ASKON-TestTask.csproj
@@ -7,4 +7,9 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASKON-TestTask.Domain\ASKON-TestTask.Domain.csproj" />
+    <ProjectReference Include="..\ASKON-TestTask.Persistence\ASKON-TestTask.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
