--- a/ASKON-TestTask/ASKON-TestTask/ASKON-TestTask.csproj
+++ b/ASKON-TestTask/ASKON-TestTask/ASKON-TestTask.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GemBox.Document" Version="31.0.1215" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ASKON-TestTask.Domain\ASKON-TestTask.Domain.csproj" />
     <ProjectReference Include="..\ASKON-TestTask.Persistence\ASKON-TestTask.Persistence.csproj" />
   </ItemGroup>
